# depurls

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
depurls/: __init__.py  main.py
