[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depurls"
version = "0.1.0"
description = "Collect URLs for a domain from Wayback, CommonCrawl, AlienVault, urlscan.io, and VirusTotal"
readme = "README.md"
authors = [
  { name = "depro0x" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "requests>=2.28,<3.0",
]
keywords = ["security", "osint", "urls", "recon", "wayback", "commoncrawl", "urlscan", "virustotal"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Information Technology",
  "Topic :: Security",
  "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/depro0x/depurls"
Issues = "https://github.com/depro0x/depurls/issues"

[project.scripts]
depurls = "depurls.main:main"
